--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,11 +5,11 @@
     .wrapper__side-bar__user-name
       .wrapper__side-bar__user-name__top-items
         .wrapper__side-bar__user-name__top-items__name
-          rs
+          = current_user.name
         .wrapper__side-bar__user-name__top-items__icons
           = link_to '#' do
             %i.far.fa-edit
-          = link_to '#' do
+          = link_to edit_user_path(current_user) do
             %i.fas.fa-cog
     .wrapper__side-bar__group
       .wrapper__side-bar__group__name
