--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -97,18 +97,55 @@
         margin-top: 35px;
       }
     }
-    &__message-form{
-      background-color: #d2d2d2;
-      height: 90px;
-      display: flex;
-      justify-content: space-between;
-      &__input-box{
-        text-align: center;
-        height: 50px;
-        margin: 20px 15px 20px 40px;
-        position: relative;
-        display: flex;
+    // &__message-form{
+    //   background-color: #d2d2d2;
+    //   height: 90px;
+    //   display: flex;
+    //   justify-content: space-between;
+    //   &__input-box{
+    //     text-align: center;
+    //     height: 50px;
+    //     margin: 20px 15px 20px 40px;
+    //     position: relative;
+    //     display: flex;
+    //   }
+    // }
+  }
+
+  .form {
+    background-color: #DDDDDD;
+    box-sizing: border-box;
+    height: 90px;
+    padding: 20px 50px 20px 40px;
+    &__message {
+      border: none;
+      float: left;
+      height: 50px;
+      width: calc(100% - 150px);
+    }
+    &__mask {
+      background-color: $white;
+      float: left;
+      height: 50px;
+      padding-right: 10px;
+      &__image {
+        font-size: 20px;
+        line-height: 50px;
+        
       }
+      .hidden {
+        display: none;
+      }
+    }
+    &__submit {
+      background-color: $light_blue;
+      border: none;
+      color: $white;
+      float: right;
+      font-size: 16px;
+      height: 50px;
+      margin-left: 15px;
+      padding: 0 30px;
     }
   }
 
@@ -136,31 +173,35 @@
   text-decoration: none;
 }
 
-.message-text {
-  height: 50px;
-  width: calc(100vw - 480px);
-}
+// .message-text {
+//   height: 50px;
+//   width: calc(100vw - 480px);
+// }
 
-.input-box__image__file {
-  display: none;
-}
+// .form__mask {
+//   display: flex;
+// }
 
-.fa {
-  position: absolute;
-  top: 15px;
-  right: 10px;
-  cursor: pointer;
-}
+// .input-box__image__file {
+//   display: none;
+// }
 
-.send-btn {
-  width: 100px;
-  height: 50px;
-  padding: 0 30px;
-  margin: 20px 40px 0 0;
-  background-color: #38aef0;
-  color: white;
-  cursor: pointer;
-}
+// .fa {
+//   position: absolute;
+//   top: 15px;
+//   right: 10px;
+//   cursor: pointer;
+// }
+
+// .send-btn {
+//   width: 100px;
+//   height: 50px;
+//   padding: 0 30px;
+//   margin: 20px 40px 0 0;
+//   background-color: #38aef0;
+//   color: white;
+//   cursor: pointer;
+// }
 
 
 
