--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -2,36 +2,36 @@
   = render "side_bar"
   = render "main_chat"
 
-  .wrapper__chat-main
-    .wrapper__chat-main__group-info
-      .wrapper__chat-main__group-info__name
-        test-name
-        .wrapper__chat-main__group-info__name__member
-          test-member
-      .wrapper__chat-main__group-info__edit
-        %a.edit-btn{href: '#'}Edit
-    .wrapper__chat-main__message-list
-      .wrapper__chat-main__message-list__messages
-        .wrapper__chat-main__message-list__name
-          test-name
-          .wrapper__chat-main__message-list__message
-            test-message
-        .wrapper__chat-main__message-list__date
-          2020/4/10
-      .wrapper__chat-main__message-list__messages
-        .wrapper__chat-main__message-list__name
-          test-name
-          .wrapper__chat-main__message-list__message
-            test-message
-        .wrapper__chat-main__message-list__date
-          2020/4/10
-    .wrapper__chat-main__message-form
-      .wrapper__chat-main__message-form__input-box
-        %input.message-text{:name => "text", :placeholder => "type a message", :type => "text", :value => ""}/
-        %label.input-box__image
-          %i.fa.fa-image
-          %input.input-box__image__file{:type => "file",}
-      %input.send-btn{:type => "submit", :value => "Send"}
+  -# .wrapper__chat-main
+  -#   .wrapper__chat-main__group-info
+  -#     .wrapper__chat-main__group-info__name
+  -#       test-name
+  -#       .wrapper__chat-main__group-info__name__member
+  -#         test-member
+  -#     .wrapper__chat-main__group-info__edit
+  -#       %a.edit-btn{href: '#'}Edit
+  -#   .wrapper__chat-main__message-list
+  -#     .wrapper__chat-main__message-list__messages
+  -#       .wrapper__chat-main__message-list__name
+  -#         test-name
+  -#         .wrapper__chat-main__message-list__message
+  -#           test-message
+  -#       .wrapper__chat-main__message-list__date
+  -#         2020/4/10
+  -#     .wrapper__chat-main__message-list__messages
+  -#       .wrapper__chat-main__message-list__name
+  -#         test-name
+  -#         .wrapper__chat-main__message-list__message
+  -#           test-message
+  -#       .wrapper__chat-main__message-list__date
+  -#         2020/4/10
+  -#   .wrapper__chat-main__message-form
+  -#     .wrapper__chat-main__message-form__input-box
+  -#       %input.message-text{:name => "text", :placeholder => "type a message", :type => "text", :value => ""}/
+  -#       %label.input-box__image
+  -#         %i.fa.fa-image
+  -#         %input.input-box__image__file{:type => "file",}
+  -#     %input.send-btn{:type => "submit", :value => "Send"}
       
 
 -# %h1 Messages#index
