--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,10 +1,10 @@
-.message-list
-  .message-list__messages
-    .message-list__name
+.message
+  .upper-message
+    .upper-message__user-name
       = message.user.name
-    .message-list__date
+    .upper-message__date
       = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-  .message-list__message
+  .lower-message
     - if message.content.present?
       %p.lower-message__content
         = message.content
