--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -30,25 +30,30 @@
           width: 60px;
           text-align: right;
           line-height: 20px;
-          text-decoration: none;
         }
       } 
     }
     &__group{
       height: 100px;
+      text-decoration: none;
       &__name{
         font-size: 15px;
         font-weight: bold;
         color: #ffffff;
         margin: 20px 20px 5px 20px;
+        text-decoration: none;
       }
       &__message{
         font-size: 11px;
         font-weight: bold;
         color: #ffffff;
         margin: 0 20px 40px 20px;
+        text-decoration: none;
       }
     }
+  }
+  .group-link {
+    text-decoration: none;
   }
   
   .chat-main{
@@ -116,22 +121,25 @@
     background-color: #DDDDDD;
     box-sizing: border-box;
     height: 90px;
-    padding: 20px 50px 20px 40px;
+    padding: 20px 40px 20px 40px;
+    position: relative;
     &__message {
       border: none;
       float: left;
       height: 50px;
-      width: calc(100% - 150px);
+      width: calc(100% - 120px);
+      padding-left: 10px;
     }
     &__mask {
-      background-color: $white;
       float: left;
       height: 50px;
       padding-right: 10px;
+      position: absolute;
+      top: 20px;
+      right: 160px;
       &__image {
         font-size: 20px;
         line-height: 50px;
-        color: black;
         cursor: pointer;
         
       }
@@ -148,6 +156,8 @@
       height: 50px;
       margin-left: 15px;
       padding: 0 30px;
+      cursor: pointer;
+
     }
   }
 
