--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -11,7 +11,7 @@
   .side-bar__group
     - current_user.groups.each do |group|
       .group
-        = link_to group_messages_path(group) do
+        = link_to group_messages_path(group), {class: "group-link"} do
           .side-bar__group__name
             = group.name
           .side-bar__group__message
